--- a/posts/css/테스트-파일.md
+++ b/posts/css/테스트-파일.md
@@ -1,8 +1,8 @@
 ---
-title: Mastering JavaScript
+title: 네? 제가 CSS 고인물로 보이시나요? 222
 excerpt: JavaScript is the most important programming language for web development. You probably don't know it well enough!
 image: mastering-js-thumb.png
-isFeatured: false
+isFeatured: true
 date: "2021-10-30"
 ---
 
