--- a/posts/css/테스트-파일.md
+++ b/posts/css/테스트-파일.md
@@ -1,11 +1,13 @@
 ---
 title: 네? 제가 CSS 고인물로 보이시나요? 222
+subTitle: 부제목입니다리
 excerpt: JavaScript is the most important programming language for web development. You probably don't know it well enough!
-image: mastering-js-thumb.png
+thumbNailImage: https://drive.google.com/uc?export=view&id=1rEKKbZ9-6NQf3dJCt0vKiKdz7mXt2Pnq
 isFeatured: true
 date: "2021-10-30"
 ---
 
+<span style="color:red">**글씨색 변경**</span>
 JavaScript powers the web - it's **the** most important programming language you need to know as a web developer.
 
 For example, you should understand code like this:
@@ -52,4 +54,6 @@ function printBasics() {
 printBasics();
 ```
 
+![오홍홍](https://drive.google.com/uc?export=view&id=1rEKKbZ9-6NQf3dJCt0vKiKdz7mXt2Pnq)
+<span style="color:red"> 글씨색 변경 </span>
 Learn more about it [here](https://academind.com).
