--- a/posts/js/테스트-파일.md
+++ b/posts/js/테스트-파일.md
@@ -1,7 +1,7 @@
 ---
 title: 네? 제가 자바스크립트 고인물로 보인시나요?
 excerpt: JavaScript is the most important programming language for web development. You probably don't know it well enough!
-image: mastering-js-thumb.png
+thumbNailImage: https://drive.google.com/uc?export=view&id=1rEKKbZ9-6NQf3dJCt0vKiKdz7mXt2Pnq
 isFeatured: true
 date: "2021-10-30"
 ---
