🚚 md 파일 mdx로 변경

--- a/posts/css/테스트-파일 copy.mdx
+++ b/posts/css/테스트-파일 copy.mdx
@@ -7,7 +7,7 @@ isFeatured: true
 date: "2021-10-30"
 ---
 
-# 가장 큰 헤딩 텍스트
+# 가장 큰 <span style={{color: "red", backgroundColor: "orange"}}>헤딩 텍스트</span>
 
 ## 두번째 큰 헤딩 텍스트
 
@@ -35,15 +35,18 @@ JavaScript powers the web - it's **the** most important programming language you
 
 For example, you should understand code like this:
 
+<Codeblock>
 ```js
 const basics = 'Okay, that should not be too difficult actually';
 
 function printBasics() {
-  console.log(basics):
+console.log(basics):
 }
 
 printBasics();
-```
+
+````
+</Codeblock>
 
 Learn more about it [here](https://academind.com).
 
@@ -51,20 +54,25 @@ JavaScript powers the web - it's **the** most important programming language you
 
 For example, you should understand code like this:
 
+<Codeblock>
 ```js
 const basics = 'Okay, that should not be too difficult actually';
 
 function printBasics() {
-  console.log(basics):
+console.log(basics):
 }
 
 printBasics();
-```
+
+````
+
+</Codeblock>
 
 ![오홍홍](https://drive.google.com/uc?export=view&id=1rEKKbZ9-6NQf3dJCt0vKiKdz7mXt2Pnq)
 
 _image_caption_
-<span style="color:red"> 글씨색 변경 </span>
+
+<span style={{ color: "red", backgroundColor: "orange" }}> 글씨색 변경 </span>
 Learn more about it [here](https://academind.com).
 
 ### 1.리스트
@@ -74,3 +82,7 @@ Learn more about it [here](https://academind.com).
 ### 3.리스트
 
 ### 4.리스트
+
+```
+
+```
