--- a/posts/1.Javascript/프로토타입(ProtoType)-알아보기.mdx
+++ b/posts/1.Javascript/프로토타입(ProtoType)-알아보기.mdx
@@ -1,5 +1,5 @@
 ---
-title: 프로토타입(ProtoType)이란
+title: 프로토타입(ProtoType) 알아보기
 intro: "예전에 같이 일하던 프론트엔드 개발자님께 ‘프로토타입이 뭔지 아시나요?’란 질문을 받은 적이 있는데요. 머리 속에 둥둥 떠오르는 내용들을 말로 설명하기 어려웠던 기억이 납니다. 공부를 하다보면 강의를 듣거나 문서를 읽은 것만으로 이해했다고 착각하기 쉬운 것 같습니다. 머리로 어렴풋하게 알고 있는 것과 실제로 다른 사람에게 말로 설명하는 것에는 아주 큰 차이가 있는데 말이죠. 오늘은 제가 알고 있다고 착각했던 프로토타입에 대해 정리해보겠습니다."
 isFeatured: true
 createdAt: "2024-08-02"
