--- a/posts/1.Javascript/실행-컨텍스트-알아보기.mdx
+++ b/posts/1.Javascript/실행-컨텍스트-알아보기.mdx
@@ -1,5 +1,5 @@
 ---
-title: 실행 컨텍스트란?
+title: 실행 컨텍스트란 알아보기
 intro: "이전에 변수 이야기를 하며 호이스팅, 스코프 체인 이야기를 언급했는데요. 왜 그런 현상이 일어나는지 궁금하지 않으셨나요? 실행 컨텍스트를 알게 되면 많은 궁금증이 풀리게 됩니다. 얼른 실행 컨텍스트에 대해 알아보러 갑시다."
 isFeatured: true
 createdAt: "2024-08-12"
