📝 포스트 내용 수정

--- a/posts/5.회고/블로그를 배포하며.mdx
+++ b/posts/5.회고/블로그를 배포하며.mdx
@@ -12,7 +12,7 @@ keywords: "블로그, 회고"
 <br/>
 개발 블로그를 해야겠다는 생각은 몇 년 전부터 계속 하고 있었습니다. 다만 생각만 할 뿐 실천은 못하고 있는 상태였습니다. 그러다 작년 Next.js를 공부하며 만든 블로그를 실제로 운영해보기로 결심했지만 내가 개발 블로그를 할 수 있을까 싶은 망설임과 바빠서 시간이 나지 않는다는 핑계로 블로그는 점점 뒷전이 되었습니다. (블로그 : Remember Me🥹)
 <br/>
-올해 4월 디즈니 애니메이션 '코코'를 보았습니다. 눈물 버튼으로 유명한 영화여서 '절대 안울어야지' 다짐 했지만 눈물을 흘리며 영화관에서 나와버렸습니다.
+올해 4월 디즈니 애니메이션 '코코'를 보았습니다. 눈물 버튼으로 유명한 영화여서 '절대 안울어야지' 다짐 했지만 결국 눈물을 흘리며 영화관에서 나와버렸습니다.
 코코는 음악이 하고 싶은 소년 미구엘(~~기타치는 검은 머리 소년이 코코죠?~~)과 음악을 극도로 싫어하는 가족들과의 갈등을 풀어나가는 내용으로 당연하게도 미구엘과 가족들을 중심으로 이야기가 진행됩니다. 
 <br/>
 그런데 영화를 보고나서 가장 기억에 남은 인물은 따로 있었습니다.
