📝 9월 회고 포스팅 수정

--- a/posts/5.회고/9월-회고.mdx
+++ b/posts/5.회고/9월-회고.mdx
@@ -27,7 +27,7 @@ keywords: "블로그, 회고, 9월 회고"
 <br/>
 리액트 쿼리는 원래 사용하던 라이브러리였지만 늘 사용하는 기능만 반복적으로 사용해왔어서 깊게 공부하고자 예전에 유데미에서 구매해둔 강의를 보며 전체적인 사용법을 익혔습니다. staleTime과 gcTime의 차이, isFetching과 isLoading의 차이 등 개발하며 크게 신경쓰지 못한 개념들에 대해 다시 정리할 수 있어서 좋았습니다. 에러를 한번에 관리하거나 쿼리를 모두 불러왔는지 확인할 수 있는 등 몰랐던 부분에 대해서도 알게 되어 그저 관성적으로 늘 쓰는 것만 사용해왔구나 싶어서 반성하기도 했습니다. 이번에 배운 내용들도 블로그에 잘 정리해두려합니다.
 <br/>
-### 리액트와 넥스트 최적화 공부
+### 4.리액트와 넥스트 최적화 공부
 <br/>
 요즘 많이 드는 생각이 내가 과연 2년차의 실력을 가지고 있는가? 입니다. 구현은 어떻게든 할 수 있지만 코드의 최적화까지 고려하며 기간 내에 작업을 할 수 있는가? 라고 스스로에게 물어본다면 자신이 없습니다. 물론 좋은 코드를 작성하기 위해 노력하지만 때론 시간이 부족하다는 이유로, 혹은 지식 부족으로 놓치는 부분도 많은 듯 하여 최적화 관련하여 강의를 들었습니다. 트리쉐이킹, 레이아웃 쉬프트 방지, 병목 코드 제거 하는 방법, 대용량 리스트 다루는 방법 등 몰랐던 부분이나 알고 있지만 잘 적용하지 못했던 부분들을 다시 공부하며 블로그에도 적용해 둘 예정입니다. 
 <br/>
@@ -46,7 +46,7 @@ keywords: "블로그, 회고, 9월 회고"
 <br/>
 ## 포스팅을 마무리하며
 <br/>
-9월은 정말 폐관수련하듯 노트북 붙들고 블로그 만들고 배포하고 글 쓰고, 사놓고 안들었던 강의들과 미뤄왔던 공부하며 열심히 달려온 것 같습니다. 정말 한달이 길게 느껴졌습니다. 그럼에도 여전히 배워야 할 것들과 배우고 싶은 것들이 넘쳐나서 벅차기도 하고 즐겁기도 합니다. 다만 이번에는 강의를 듣는 것에 많이 집중했기 때문에 10월 달에는 그 내용들을 다시 정리하고 적용해보는 시간을 주로 가져보려 합니다. 날이 선선해진 만큼 밖에도 좀 돌아다녀보고요. 10월도 화이팅해보겠습니다💪  
+9월은 정말 폐관수련하듯 노트북 붙들고 블로그 만들고 배포하고 글 쓰고, 사놓고 안들었던 강의들과 미뤄왔던 공부하며 열심히 달려온 것 같습니다. 정말 한달이 길게 느껴졌습니다. 그럼에도 여전히 배워야 할 것들과 배우고 싶은 것들이 넘쳐나서 벅차기도 하고 즐겁기도 합니다. 다만 이번에는 강의를 듣는 것에 많이 집중했기 때문에 10월 달에는 그 내용들을 다시 정리하고 적용해보는 시간을 주로 가져보려 합니다. 날이 선선해진 만큼 밖에도 좀 돌아다녀보고요. 그럼 10월도 화이팅해보겠습니다💪  
 
 
 
