✏️ 📝 post 오타 수정

--- a/posts/1.Javascript/이벤트루프-알아보기.mdx
+++ b/posts/1.Javascript/이벤트루프-알아보기.mdx
@@ -19,7 +19,7 @@ keywords: "자바스크립트, javascript, 이벤트 루프, event loop, 콜 스
 <br/>
 ### 콜 스택 (Call Stack)
 <br/>
-**콜 스택**은 자바스크립트 엔진이 **함수의 실행 순서를 관리하기 위해 사용하는 스택(Stack) 자료구조**입니다. 함수가 호츌되며 생성된 실행 컨텍스트가 콜 스택에 차곡차곡 쌓이게 되며 가장 나중에 호출된 함수가 가장 먼저 실행되는**LIFO(Last In First Out)** 구조입니다.
+**콜 스택**은 자바스크립트 엔진이 **함수의 실행 순서를 관리하기 위해 사용하는 스택(Stack) 자료구조**입니다. 함수가 호출되며 생성된 실행 컨텍스트가 콜 스택에 차곡차곡 쌓이게 되며 가장 나중에 호출된 함수가 가장 먼저 실행되는**LIFO(Last In First Out)** 구조입니다.
 <br/>
 ### 태스크 큐 (Task Queue)
 <br/>
