📝 블로그를 배포하며 포스트 비디오 변경

--- a/posts/99.회고/블로그를 배포하며.mdx
+++ b/posts/99.회고/블로그를 배포하며.mdx
@@ -17,7 +17,7 @@ keywords: "블로그, 회고"
 <br/>
 그런데 영화를 보고나서 가장 기억에 남은 인물은 따로 있었습니다.
 <br/>
-<YoutubePlayer videoId="OF9Ixfq4BCI" elementId="youtube" start={355}/>
+<YoutubePlayer videoId="ZCwXys58lgs" elementId="youtube" start={271}/>
 ***"내가 너의 첫번째 청중이 될게."***
 <br/>
 바로 미구엘이 구두를 닦아주던 악사 아저씨입니다. 광장에서 개최되는 음악 페스티벌에 나갈지 말지 고민하던 미구엘에게 기회를 포착하라는 응원과 함께 자신의 기타를 내어주는 장면이 굉장히 인상 깊었습니다. 위 예고편에 나온 분량이 거의 다일 정도록 짧게 스쳐지나가는 조연 캐릭터가 계속 생각 났던 것은 어쩌면 미구엘처럼 새로운 도전을 망설이는 제가 듣고 싶었던 말을 해주었기 때문일지도 모르겠습니다. 그리고 언젠가는 저도 도전을 시작하는 사람에게 용기를 복돋아 주는 사람이 되고 싶다는 생각이 들었습니다. (하지만 모르는 꼬마 개발자한테 맥북 건네주기는 좀 어려울지도요?👩‍🦲)
