--- a/posts/3.React/ErrorBoundary로-에러-핸들링하기.mdx
+++ b/posts/3.React/ErrorBoundary로-에러-핸들링하기.mdx
@@ -2,7 +2,7 @@
 title: ErrorBoundary로 에러 핸들링하기
 intro: "혹시 웹 페이지의 특정 부분에서 발생한 에러로 인해 페이지 전체가 죽는 경험을 해보셨나요? 이런 상황을 방지하기 위해 리액트에서는 에러의 경계를 구분 지어 에러가 페이지 전체에 영향을 미치지 않도록 할 수 있습니다. 이번 포스트에서는 리액트에서 소개하는 ErrorBoundary 컴포넌트를 사용하여 에러 관리하는 방법에 대해 알아보겠습니다."
 createdAt: "2024-12-28"
-thumbnail : "https://drive.google.com/uc?export=view&id=1A5-s3Lb_Jhv4pM4rn2qmqQdMGC0OqHIb"
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486597/17.ErrorBoundary/p0e7amztigin6wljsmya.jpg"
 keywords: "React, ErrorBoundary, Error Handling, 에러 처리, 에러, 리액트"
 ---
 <p>{intro}</p>
