--- a/posts/3.React/HOC-사용해서-재사용성-높이기.mdx
+++ b/posts/3.React/HOC-사용해서-재사용성-높이기.mdx
@@ -2,7 +2,7 @@
 title:  HOC 사용해서 재사용성 높이기
 intro: "만약 컴포넌트에 로딩, 인증, 에러 등 공통된 작업을 처리해주어야 할 때 컴포넌트 각각에 해당 처리를 하게되면 어떨까요? 반복되는 코드를 작성하게 되고 나중에 인증 로직이 바뀌었을 때 하나 하나 수정해 주는 것도 상당히 번거로울 것 같습니다. 이와 같이 컴포넌트에 공통된 로직 처리를 해줄 때 유용한 것이 바로 HOC입니다. 일명 고차 컴포넌트인데요. 이번 포스트에서는 HOC에 대해 알아보도록 하겠습니다."
 createdAt: "2024-12-28"
-thumbnail : "https://drive.google.com/uc?export=view&id=15wcbWLIKHYXcMhebl95_2gsi5M66F39-"
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486609/18.HOC/hik31dk0akfexpitpvi2.jpg"
 keywords: "React, HOC, high order component, componnet"
 ---
 <p>{intro}</p>
