--- a/posts/5.Error/Jest에서-SVGR-테스트하기.mdx
+++ b/posts/5.Error/Jest에서-SVGR-테스트하기.mdx
@@ -2,7 +2,7 @@
 title: Jest에서 SVGR 테스트하기
 intro: "이번 포스트에서는 Jest에서 SVGR을 사용할 시 발생하는 에러 해결 방안을 공유합니다."
 createdAt: "2024-12-27"
-thumbnail : "https://drive.google.com/uc?export=view&id=1nDm_YHCq5UPXcKshT9PIXulwZqjV0_Nc"
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486588/16.SVGR_mocking/sixgitglequ2wpfsmtib.jpg"
 keywords: "Jest, SVGR, svg, 목업, mocking, test"
 ---
 <p>{intro}</p>
