--- a/posts/6.Book/테스트코드-왜-쓸까.mdx
+++ b/posts/6.Book/테스트코드-왜-쓸까.mdx
@@ -2,7 +2,7 @@
 title: 리팩토링 2판 정리 - 테스트코드 구축하기
 intro: "최근 테스트코드에 대해 관심을 가지고 공부를 하고 있습니다. 그리고 일주일 전 많은 개발자분들이 추천하는 책인 파틴 파울러의 리팩토링을 읽어보았는데요. 리팩토링에 앞서 테스트코드의 중요성을 강조하고 있다는 점에 상당히 놀랐습니다. ⌜테스트코드 구축하기⌟라는 챕터를 따로 할애할 정도로 말이죠. 오늘은 리팩토링 2판 챕터 4 ⌜테스트코드 구축하기⌟를 보며 리팩토링에서 왜 테스트코드가 중요한지, 어떻게 테스트코드를 구축해야 할 지 정리해 보겠습니다."
 createdAt: "2024-12-14"
-thumbnail : "https://drive.google.com/uc?export=view&id=12AQS7PirbmNP5IxCmK94TiFpdZEpqrIe"
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486581/15.refactoring_ch_04/koqwaqcv5yla7uslkj46.jpg"
 keywords: "리팩토링, refactoring, 리팩토링 2판, javascript, 테스트코드, testcode, test, 마틴 파울러"
 ---
 <p>{intro}</p>
