--- a/posts/99.회고/9월-회고.mdx
+++ b/posts/99.회고/9월-회고.mdx
@@ -3,7 +3,7 @@ title: 9월 회고
 intro: "어느새 여름 지나 가을이 되었습니다. 9월도 여전히 더웠지만 무더위는 사그라들었습니다. 덕분에 여름 내내 하던 강제 미라클 모닝을 중단하게 되었습니다🫠 잠은 조금 늘었지만 그럼에도 이것저것 많은 일들을 한 것 같습니다. 그럼 9월 한 달간 무슨 일을 하며 지냈는지 돌아보도록 하겠습니다."
 isFeatured: true
 createdAt: "2024-10-02"
-thumbnail : "https://drive.google.com/uc?export=view&id=18hd55ecaa6djsBAZhfpD497CLikGvVhN" 
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486550/12.september/lljokkakxqjxw946nq0p.jpg" 
 keywords: "블로그, 회고, 9월 회고"
 ---
 <p>{intro}</p>
