--- a/posts/99.회고/블로그를 배포하며.mdx
+++ b/posts/99.회고/블로그를 배포하며.mdx
@@ -3,7 +3,7 @@ title: 블로그를 배포하며
 intro: "블로그를 배포하며 그동안 느낀 생각을 회고해봅니다. 블로그를 만드는 과정 자체는 재밌었지만 막상 배포하는 것은 왜 계속 망설여졌는지, 앞으로 어떻게 블로그를 운영해 나갈 예정인지에 대한 이야기를 해보겠습니다."
 isFeatured: true
 createdAt: "2024-09-02"
-thumbnail : "https://drive.google.com/uc?export=view&id=1Pzdw0Swu61uaNzkDeMVpjnejLY_V3rfc" 
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486364/06.blog_open/kpk3lyuetqpnrgl68ht3.jpg" 
 keywords: "블로그, 회고"
 ---
 <p>{intro}</p>
