--- a/posts/99.회고/2024-연말결산.mdx
+++ b/posts/99.회고/2024-연말결산.mdx
@@ -3,7 +3,7 @@ title: 2024 연말결산
 intro: "2025년 새해가 밝고, 어느덧 설날이 되었습니다. 이번 포스트에서는 2024년에 제가 무엇을 하며 지냈는지 연말 결산을 해보도록 하겠습니다. 아마 TMI 대잔치가 되지 않을까 생각합니다 👻"
 isFeatured: true
 createdAt: "2025-01-29"
-thumbnail : "https://drive.google.com/uc?export=view&id=1CnfMQsYgnXlWcDrOOg3m1QVGppLtstaF" 
+thumbnail : "https://res.cloudinary.com/yun-log/image/upload/v1738486651/20.%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A7%E1%86%AF%E1%84%89%E1%85%A1%E1%86%AB%282024%29/lsgv7scn74styw1k3b7b.jpg" 
 keywords: "블로그, 회고, 2024년, 연말결산"
 ---
 <p>{intro}</p>
@@ -18,7 +18,7 @@ keywords: "블로그, 회고, 2024년, 연말결산"
 
 (그리고 화면이 배포되었을 때 슬랙에서의 샤라웃, 더 크게 칭찬해줘라.) 
 <br/>
-<PostImage src="https://drive.google.com/uc?export=view&id=1VvtduxrSIYBodk9T7YKc7ujnLxrOtPU9" alt="더 크게 칭찬해 줘라" width={379} height={219}/>
+<PostImage src="https://res.cloudinary.com/yun-log/image/upload/v1738486653/20.%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A7%E1%86%AF%E1%84%89%E1%85%A1%E1%86%AB%282024%29/h5b2hyslzwpulighassm.jpg" alt="더 크게 칭찬해 줘라" width={379} height={219}/>
 <br/>
 코로나 시기에 투자를 잘 받은 회사는 빠르게 성장했고 더불어 개발팀의 인원도 점점 늘어갔습니다. 너무 좋은 팀원(🦈)들과 함께 일할 수 있어서 재밌게 회사에 다닌 것 같습니다. (회사에 빌런이 없으면 자신이 빌런이라던데 설마...?) 게다가 새로 합류하신 프론트엔드 개발자님께서 React와 Next.js를 도입해 주셔서 직무적으로도 성장할 수 있었습니다.
 <br/>
@@ -68,7 +68,7 @@ keywords: "블로그, 회고, 2024년, 연말결산"
 <br/>
 다른 분야도 그렇긴 하지만 테스트코드는 유독 배울 때 "아, 완전히 이해했어!" 싶다가도, 막상 작성하려고 보면 손가락이 멈추게 되는 것 같습니다. 
 <br/>
-<PostImage src="https://drive.google.com/uc?export=view&id=1cy4RpxptjdS-rb0pBIDvevmH95pk2O_N" alt="아 완전히 이해했어!" width={504*0.6} height={468*0.6}/>
+<PostImage src="https://res.cloudinary.com/yun-log/image/upload/v1738486649/20.%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%86%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A7%E1%86%AF%E1%84%89%E1%85%A1%E1%86%AB%282024%29/x0h6wpgayg6oerupjobn.jpg" alt="아 완전히 이해했어!" width={504*0.6} height={468*0.6}/>
 <br/>
 이걸 어떻게 테스트하지..? 하는 막연함이 앞섰지만, 일단 작성해 보는게 중요하다고 생각해서 최근에는 컴포넌트를 만들 때마다 단위 테스트를 추가하고 있는데 파랗게 패스가 뜨면 그렇게 기분이 좋을 수 없습니다. 에러를 해결하는 재미(~~고통~~)도 있고요. 
 <br/> 
