📝 프로토타입 포스팅 수정

--- a/posts/1.Javascript/프로토타입(ProtoType)-알아보기.mdx
+++ b/posts/1.Javascript/프로토타입(ProtoType)-알아보기.mdx
@@ -25,10 +25,9 @@ console.log(Object.getPrototypeOf(obj))
 <br/>
 <PostImage src="https://res.cloudinary.com/yun-log/image/upload/v1738485965/03.proto_type/oqnpaymcr3pimlmek74q.png" alt="obj의 프로토타입" width="400" height="263" />
 <br/>
-{/* NOTE : 문장 간결하게 수정  */}
-객체 리터럴을 통해 빈 객체 obj를 만들고 콘솔을 확인해보면 [[prototype]]에 Object 프로토타입이 존재하는 것을 확인할 수 있습니다. 또한 프로토타입에 정의된 메서드를 사용할 수도 있죠.
+빈 객체 obj를 만들고 콘솔을 확인해보면 [[prototype]]에 Object 프로토타입이 존재하는 것을 확인할 수 있습니다. 그리고 프로토타입에 정의된 메서드를 사용할 수도 있죠.
 <br/>
-다만 직접 프로토타입에 접근하려고 할 때 obj.[[Prototype]]으로는 접근할 수 없고 Object.getPrototypeOf() 메서드를 사용하여 객체의 프로토타입에 접근할 수 있습니다. 
+다만 직접 프로토타입에 접근하려고 할 때 obj.[[Prototype]]으로는 접근하지 못하기에 Object.getPrototypeOf() 메서드를 사용하여 접근해야 합니다.
 <br/>
 
 <br/>
