--- a/posts/3.React/ErrorBoundary로-에러-핸들링하기.mdx
+++ b/posts/3.React/ErrorBoundary로-에러-핸들링하기.mdx
@@ -21,8 +21,8 @@ ErrorBoundary 컴포넌트를 만들 때는 에러 처리와 관련된 라이프
 <br/>
 클래스형 컴포넌트에는 익숙하지 않아서 <HighlightText type="background" backgroundColor="#e5e5e5">getDerivedStateFromError</HighlightText >와 <HighlightText type="background" backgroundColor="#e5e5e5">componentDidCatch</HighlightText>에 대해서 먼저 알아보겠습니다.
 <br/>
-- **getDerivedStateFromError** : 정적 메서드로 리액트가 렌더링하는 중 자식 컴포넌트에서 오류가 발생할 때 호출됩니다. **에러 발생 시 상태를 업데이트하여 UI를 렌더링**합니다. 또한 순수 함수이기 때문에 사이트 이펙트 작업(ex:에러 리포팅)은 componentDidCatch를 사용해야 한다고 합니다.
-- **componentDidCatch** : 리액트가 렌더링할 때 자식 컴포넌트에서 오류가 발생하면 호출됩니다. 에러 리포팅 등 **사이드 이펙트 작업을 처리**합니다.
+- **getDerivedStateFromError** : 정적 메서드로 리액트가 렌더링하는 중 자식 컴포넌트에서 에러가 발생할 때 호출됩니다. **에러 발생 시 상태를 업데이트하여 UI를 렌더링**합니다. 또한 순수 함수이기 때문에 사이트 이펙트 작업(ex:에러 리포팅)은 componentDidCatch를 사용해야 한다고 합니다.
+- **componentDidCatch** : 리액트가 렌더링할 때 자식 컴포넌트에서 에러가 발생하면 호출됩니다. 에러 리포팅 등 **사이드 이펙트 작업을 처리**합니다.
 <br/>
 에러와 관련된 라이프 사이클 메서드도 알아보았으니 이제 ErrorBoundary 컴포넌트 코드를 만들어보겠습니다. 리액트 공식 문서에서 제공하는 코드에 타입을 추가해보았습니다.
 <br/>
@@ -98,7 +98,7 @@ export default ErrorBoundary;
 
 ```
 이렇게 Profile 컴포넌트를 ErrorBoundary로 감싸면 Profile 컴포넌트에서 에러가 발생했을 때 fallback UI가 노출되며 해당 에러를 캐치하여 애플리케이션 전체에 영향을 주지 않도록 경계를 만들 수 있습니다.
-그렇다면 모든 컴포넌트를 ErrorBoundary로 감싸야 할까요? 리액트 공식 문서는 오류 메시지를 표시하는 것이 합리적인 곳을 고려하라고 합니다. props를 전달받아 화면을 그리는 역할만 한다면 굳이 ErrorBoundary로 감싸지 않아도 됩니다.
+그렇다면 모든 컴포넌트를 ErrorBoundary로 감싸야 할까요? 리액트 공식 문서는 에러 메시지를 표시하는 것이 합리적인 곳을 고려하라고 합니다. props를 전달받아 화면을 그리는 역할만 한다면 굳이 ErrorBoundary로 감싸지 않아도 됩니다.
 <br/>
 ## 포스팅을 마무리하며
 <br/>
