--- a/posts/1.Javascript/클로저-알아보기.mdx
+++ b/posts/1.Javascript/클로저-알아보기.mdx
@@ -32,7 +32,13 @@ keywords: "자바스크립트, javascript, 클로저, 스코프"
 >다시 말해, 클로저는 함수가 정의된 위치의 스코프(외부 환경)를 기억하고, 그 함수가 실행될 때도 그 스코프에 접근할 수 있게 해줍니다. 자바스크립트에서 클로저는 함수가 생성될 때마다 자동으로 만들어집니다.
 
 <br/>
-설명을 읽어도 이해하기 쉽지 않습니다. 천천히 정리해보겠습니다. 클로저(폐쇄)란 함수의 스코프가 형성되어 외부에서 접근할 수 없는 상황(폐쇄된 상황)에서 **스코프 안에 선언된 내부 함수를 통해 폐쇄된 함수의 렉시컬 환경을 기억하고 접근할 수 있도록 하는 것**입니다. 여기서 렉시컬 환경에 대해 잠시 이야기하고 넘어가겠습니다. 렉시컬 환경은 실행 컨텍스트에서 함수에 선언된 식별자 정보와 외부 환경에 참조 정보를 가지고 있으며 이를 통해 식별자에 참조할 수 있는 유효범위인 스코프를 형성하게 됩니다. 또한 렉시컬 환경은 선언될 당시의 위치에 따라 결정됩니다. 즉 클로저를 통해 **외부에서 직접적으로 식별자에 접근하는 것을 막고 함수 안에 선언된 내부 함수를 통해서만 식별자에 접근할 수 있게 됩니다. 말로 풀어 설명하려니 어쩐지 미궁에 빠진 것 같습니다😅 코드를 보면 오히려 쉽게 이해할 수 있습니다.
+설명을 읽어도 이해하기 쉽지 않습니다. 천천히 정리해보겠습니다. 클로저란 **함수 안에 선언된 내부 함수를 통해 함수의 환경(변수, 함수)에 접근하는 것**입니다. 클로저를 통해 외부에서 직접적으로 함수 내부 환경에 접근하는 것을 막고 반환된 내부 함수를 통해서만 내부 환경에 접근할 수 있게 됩니다. 이는 렉시컬 환경의 특성과 관련이 깊습니다.
+<br/>
+<Callout title="렉시컬 환경(Lexical Environment)이란?">
+렉시컬 환경은 함수가 실행될 때의 식별자 정보와 외부 환경 참조를 가지고 있습니다. 이를 통해 식별자에 접근할 수 있는 스코프가 형성되어 외부에서 함수 내부 환경에 접근할 수 없게 됩니다. 또한 렉시컬 환경은 선언 당시의 위치에 따라 결정되기 때문에 함수의 실행이 종료되었어도 내부 함수가 선언 당시의 외부 환경(함수의 렉시컬 환경)을 기억하고 참조할 수 있게 됩니다. 
+</Callout>
+<br/>
+ 말은 어렵지만 코드를 통해 쉽게 이해할 수 있습니다.
 <br/>
 ```javascript
 const outerFunc = () => {
