--- a/posts/2.Browser/주요-렌더링-경로-알아보기.mdx
+++ b/posts/2.Browser/주요-렌더링-경로-알아보기.mdx
@@ -33,7 +33,7 @@ keywords: "브라우저, Browser, DOM, CSSOM, render tree, 성능 최적화, 중
 - 브라우저가 HTML을 파싱하여 DOM Tree를 생성합니다. 이때 파싱은 HTML과 같은 데이터를 브라우저가 이해할 수 있는 객체(DOM)로 변환하는 작업을 의미합니다.
 - HTML 파싱 중에 발견된 CSS, 자바스크립트, 이미지 등 외부 자원을 요청합니다.
 - CSS 파일을 파싱하면서 DOM과 CSS를 결합한 CSSOM(CSS Object Model)을 생성합니다.
-- 이 때 CSS, 자바스크립트를 파싱하기 위해 HTML 파일 파싱이 중단되며, CSS, 자바스크립트 완료 후 HTML 파싱이 재개됩니다.
+- 이 때 CSS, 자바스크립트를 파싱하기 위해 HTML 파일 파싱이 중단됩니다. CSS, 자바스크립트 파싱이 완료된 후 HTML 파싱이 재개됩니다.
 <br/>
 ### 3. 스크립팅 (Scripting)
 <br/>
