📝 스트리밍 포스트 수정

--- a/posts/4.Next/스트리밍-적용해서-라우팅-속도-개선하기.mdx
+++ b/posts/4.Next/스트리밍-적용해서-라우팅-속도-개선하기.mdx
@@ -158,14 +158,16 @@ const SomeComponent = () => {
 }
 
 export default withSuspense(
-  (props: Props) => (
-    <SomeComponent
-      {...props}
-      suspenseKey={`${props.searchParams?.["reading-state"]} ${props.searchParams?.page}}`}
-    />
-  ),
+  SomeComponent,
   <SomeLoading />
 );
+```
+<br/>
+```tsx
+const ParentComponent = ()=>{
+  return <SomeComponent suspenseKey={queryParams.id}/>
+}
+
 ```
 <br/>
 ## 포스팅을 마무리하며
